--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,12 @@ on:
   push:
     tags: ["*.*.*"]
 
+# We are using OpenID Connect to authenticate with Azure with secret.
+# https://docs.github.com/en/actions/security-for-github-actions/security-hardening-your-deployments/configuring-openid-connect-in-azure
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   main:
     runs-on: [self-hosted, idp]
@@ -41,6 +47,7 @@ jobs:
     with:
       environment: "release"
     secrets: inherit
+
 
 
 
